<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activities.PomodoroActivity"
    tools:showIn="@layout/activity_pomodoro">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        tools:showIn="@layout/activity_main">

        <TextView
            android:id="@+id/pomodoro_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:textSize="80sp"
            tools:text="88:88" />


        <TextView
            android:id="@+id/pomodoro_description"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            tools:text="Working on Pomdoro #3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                tools:text="Total Spent Pomodoros:" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Total Spent Pomodoros:" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_pomodoro_start"
                style="@style/trellodoro_button"
                android:text="@string/lbl_start_pomodoro" />

            <Button
                android:id="@+id/btn_pomodoro_stop"
                style="@style/trellodoro_button"
                android:text="@string/lbl_stop" />

            <Button
                android:id="@+id/btn_short_break"
                style="@style/trellodoro_button"
                android:text="@string/lbl_short_break" />

            <Button
                android:id="@+id/btn_long_break"
                style="@style/trellodoro_button"
                android:text="@string/lbl_long_break" />

            <Button
                android:id="@+id/btn_pomodoro_pause"
                style="@style/trellodoro_button"
                android:text="@string/lbl_pause" />

            <Button
                android:id="@+id/btn_pomodoro_restart"
                style="@style/trellodoro_button"
                android:text="@string/lbl_restart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_task_todo"
                style="@style/trellodoro_button"
                android:text="@string/lbl_todo" />

            <Button
                android:id="@+id/btn_task_done"
                style="@style/trellodoro_button"
                android:text="@string/lbl_done" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
