<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp" >

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="{typcn-info-outline}"
                android:textColor="@color/primary_light"
                android:textSize="40dp" />

            <TextView
                android:id="@+id/dialog_universal_warning_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Warning!"
                android:textColor="@color/primary_light"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="22dp"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            android:paddingTop="22dp" >

            <TextView
                android:id="@+id/dialog_universal_warning_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:text="@string/lbl_unauthorized"
                android:textColor="@color/primary_text"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <Button
                android:id="@+id/dialog_universal_warning_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/selector_button"
                android:gravity="center"
                android:minWidth="64dp"
                android:padding="8dp"
                android:visibility="gone"
                android:text="@string/txt_cancel"
                android:textColor="@color/primary"
                android:textSize="14sp" />

            <Button
                android:id="@+id/dialog_universal_warning_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/selector_button"
                android:gravity="center"
                android:minWidth="64dp"
                android:padding="8dp"
                android:text="@string/txt_ok"
                android:textColor="@color/primary"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>